--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,13 +12,17 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-text:1.10.0'              //Guava Used for advanced collections, caching, and utility methods
+    implementation 'org.apache.commons:commons-text:1.10.0'
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.6'    //Jackson Used to convert Java objects to JSON and JSON to Java objects
 
-    implementation 'com.google.guava:guava:30.1.1-jre'
+    implementation 'com.google.guava:guava:30.1.1-jre'                       //Guava Used for advanced collections, caching, and utility methods
+
+    implementation 'org.mindrot:jbcrypt:0.4'                                 // BCrypt is used for password hashing
+
 
     testImplementation 'junit:junit:4.13.2'
+
 }
 
 application {
